--- a/README.org
+++ b/README.org
@@ -9,7 +9,7 @@ build目录为部署后自动生成
 
 default.custom.yaml 中的 schema_list 字段
 
-
-default.custom.yaml: 全局设定
-<方案標識>.custom.yaml：預設輸入方案副本
-〔發行版設定〕 ibus_rime.default.yaml
+配置文件:
+- default.custom.yaml: 全局设定
+- <方案標識>.custom.yaml：預設輸入方案副本
+- 〔發行版設定〕 ibus_rime.default.yaml
